added/updated cSpell.words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,24 @@
         "./blueprint-templates",
         "~/templates/superoffice/blueprint"
     ],
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "cSpell.words": [
+        "core",
+        "index",
+        "mailgun",
+        "md",
+        "netserver",
+        "osql",
+        "SCIM",
+        "soap",
+        "SoSession",
+        "superoffice",
+        "Watchcom",
+        "webapi",
+        "webshop",
+        "website",
+        "webpage",
+        "web form",
+        "web services"
+    ]
 }
