#9 Added yaml spec for CRMScript Bool, Integer, and String types. Builds! Commented out classes and trigger scripts for faster build.

--- a/docs/api-reference/new/CRMScript.Global.Void.yml
+++ b/docs/api-reference/new/CRMScript.Global.Void.yml
@@ -1,24 +1,33 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.Global.Void
-  commentId: C:CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
   id: Void
+  langs:
+  - crmscript
   children:
-  - CRMScriptGlobal.Void.assert
+#  - CRMScriptGlobal.Void.assert
   name: Void
   nameWithType: Void
-  fullName: Void
+  fullName: CRMScript.Global.Void
   type: Class
-references:
-- uid: CRMScript.Global.Void
-  commentId: C:CRMScript.Global.Void
-  isExternal: true
-  name: Void
-  nameWithType: Void
-  fullName: Void
 - uid: CRMScript.Global.Void.assert
   commentId: M:CRMScript.Global.Void.assert
-  isExternal: true
+  id: assert
+  langs:
+  - crmscript
+  parent: CRMScript.Global.Void
   name: assert
   nameWithType: Void.assert
-  fullName: Void.assert
+  fullName: CRMScript.Global.Void.assert
+  type: Method
+  summary: "\nThis is the summary\n"
+  syntax:
+    content: Void assert(Bool)
+references:
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
