--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -3,8 +3,13 @@ items:
 - uid: CRMScript.Global
   commentId: N:CRMScript.Global
   id: CRMScript.Global
+  langs:
+  - crmscript
   children:
   - CRMScript.Global.Void
+  - CRMScript.Global.Bool
+  - CRMScript.Global.Integer
+  - CRMScript.Global.String
   name: CRMScript.Global
   nameWithType: CRMScript.Global
   fullName: CRMScript.Global
@@ -17,8 +22,27 @@ references:
   nameWithType: CRMScript.Global
   fullName: CRMScript.Global
 - uid: CRMScript.Global.Void
-  commentId: C:CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
   isExternal: true
   name: Void
   nameWithType: Void
-  fullName: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.Global.Bool
+  commentId: T:CRMScript.Global.Bool
+  isExternal: true
+  name: Bool
+  nameWithType: Bool
+  fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Integer
+  commentId: T:CRMScript.Global.Integer
+  isExternal: true
+  name: Integer
+  nameWithType: Integer
+  fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.String
+  commentId: T:CRMScript.Global.String
+  parent: System
+  isExternal: true
+  name: String
+  nameWithType: String
+  fullName: CRMScript.Global.String
