--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -3,12 +3,15 @@
   href: ../index.yml
   expanded: true
   items:
-  - name: CRMScript classes
-    href: classes/
-    topicHref: classes/index.md
+  - name: NEW
+    href: new/
+    topicHref: new/index.md
+#  - name: CRMScript classes
+#    href: classes/
+#    topicHref: classes/index.md
   - name: CRMScript global functions
     href: global-functions/
     topicHref: global-functions/index.md
-  - name: Trigger scripts
-    href: trigger-scripts/
-    topicHref: trigger-scripts/index.md
+#  - name: Trigger scripts
+#    href: trigger-scripts/
+#    topicHref: trigger-scripts/index.md
