--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -9,8 +9,11 @@ items:
   items:
   - name: CRMScript.Global.Void
     href: CRMScript.Global.Void.yml
-    items:
-    - name: CRMScript.Void.assert
-      href: CRMScript.Void.assert.yml
+  - name: CRMScript.Global.Bool
+    href: CRMScript.Global.Bool.yml
+  - name: CRMScript.Global.Integer
+    href: CRMScript.Global.Integer.yml
+  - name: CRMScript.Global.String
+    href: CRMScript.Global.String.yml
 - name: CRMScript.Event
   href: CRMScript.Event.yml
