--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -9,6 +9,7 @@ items:
   - CRMScript.Global.Void
   - CRMScript.Global.Bool
   - CRMScript.Global.Integer
+  - CRMScript.Global.Float
   - CRMScript.Global.String
   name: CRMScript.Global
   nameWithType: CRMScript.Global
@@ -39,6 +40,12 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Float
+  commentId: T:CRMScript.Global.Float
+  isExternal: true
+  name: Float
+  nameWithType: Float
+  fullName: CRMScript.Global.Float
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   parent: System
