--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -13,6 +13,8 @@ items:
     href: CRMScript.Global.Bool.yml
   - name: CRMScript.Global.Integer
     href: CRMScript.Global.Integer.yml
+  - name: CRMScript.Global.Float
+    href: CRMScript.Global.Float.yml
   - name: CRMScript.Global.String
     href: CRMScript.Global.String.yml
 - name: CRMScript.Event
