--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -11,6 +11,7 @@ items:
   - CRMScript.Global.Integer
   - CRMScript.Global.Float
   - CRMScript.Global.String
+  - CRMScript.Global.Date
   name: CRMScript.Global
   nameWithType: CRMScript.Global
   fullName: CRMScript.Global
@@ -53,3 +54,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Date
+  commentId: T:CRMScript.Global.Date
+  isExternal: true
+  name: Date
+  nameWithType: Date
+  fullName: CRMScript.Global.Date
