--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -17,5 +17,7 @@ items:
     href: CRMScript.Global.Float.yml
   - name: CRMScript.Global.String
     href: CRMScript.Global.String.yml
+  - name: CRMScript.Global.Date
+    href: CRMScript.Global.Date.yml
 - name: CRMScript.Event
   href: CRMScript.Event.yml
