--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -12,6 +12,7 @@ items:
   - CRMScript.Global.Float
   - CRMScript.Global.String
   - CRMScript.Global.Date
+  - CRMScript.Global.Time
   name: CRMScript.Global
   nameWithType: CRMScript.Global
   fullName: CRMScript.Global
@@ -60,3 +61,9 @@ references:
   name: Date
   nameWithType: Date
   fullName: CRMScript.Global.Date
+- uid: CRMScript.Global.Time
+  commentId: T:CRMScript.Global.Time
+  isExternal: true
+  name: Time
+  nameWithType: Time
+  fullName: CRMScript.Global.Time
