--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -19,5 +19,7 @@ items:
     href: CRMScript.Global.String.yml
   - name: CRMScript.Global.Date
     href: CRMScript.Global.Date.yml
+  - name: CRMScript.Global.Time
+    href: CRMScript.Global.Time.yml
 - name: CRMScript.Event
   href: CRMScript.Event.yml
