--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -12,6 +12,7 @@ items:
   - CRMScript.Global.Float
   - CRMScript.Global.String
   - CRMScript.Global.Date
+  - CRMScript.Global.DateTime
   - CRMScript.Global.Time
   name: CRMScript.Global
   nameWithType: CRMScript.Global
@@ -67,3 +68,9 @@ references:
   name: Time
   nameWithType: Time
   fullName: CRMScript.Global.Time
+- uid: CRMScript.Global.DateTime
+  commentId: T:CRMScript.Global.DateTime
+  isExternal: true
+  name: DateTime
+  nameWithType: DateTime
+  fullName: CRMScript.Global.DateTime
