--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -19,6 +19,8 @@ items:
     href: CRMScript.Global.String.yml
   - name: CRMScript.Global.Date
     href: CRMScript.Global.Date.yml
+  - name: CRMScript.Global.DateTime
+    href: CRMScript.Global.DateTime.yml
   - name: CRMScript.Global.Time
     href: CRMScript.Global.Time.yml
 - name: CRMScript.Event
