#9 added Map and Generic

--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -10,6 +10,8 @@ items:
   - CRMScript.Global.Bool
   - CRMScript.Global.Integer
   - CRMScript.Global.Float
+  - CRMScript.Global.Generic
+  - CRMScript.Global.Map
   - CRMScript.Global.String
   - CRMScript.Global.Date
   - CRMScript.Global.DateTime
@@ -74,3 +76,15 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
+- uid: CRMScript.Global.Map
+  commentId: T:CRMScript.Global.Map
+  isExternal: true
+  name: Map
+  nameWithType: Map
+  fullName: CRMScript.Global.Map
+- uid: CRMScript.Global.Generic
+  commentId: T:CRMScript.Global.Generic
+  isExternal: true
+  name: Generic
+  nameWithType: Generic
+  fullName: CRMScript.Global.Generic
