--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -17,6 +17,10 @@ items:
     href: CRMScript.Global.Float.yml
   - name: CRMScript.Global.String
     href: CRMScript.Global.String.yml
+  - name: CRMScript.Global.Map
+    href: CRMScript.Global.Map.yml
+  - name: CRMScript.Global.Generic
+    href: CRMScript.Global.Generic.yml
   - name: CRMScript.Global.Date
     href: CRMScript.Global.Date.yml
   - name: CRMScript.Global.DateTime
