#9 added Byte, Vector, XMLNode; added metadata and fixed alpha sort

--- a/docs/api-reference/new/CRMScript.Global.Bool.yml
+++ b/docs/api-reference/new/CRMScript.Global.Bool.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.Bool
   commentId: T:CRMScript.Global.Bool
   id: Bool
+  so.intellisense: Void.Bool
   langs:
   - crmscript
   children:
