--- a/docs/api-reference/new/CRMScript.Global.Date.yml
+++ b/docs/api-reference/new/CRMScript.Global.Date.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.Date
   commentId: T:CRMScript.Global.Date
   id: Date
+  so.intellisense: Void.Date
   langs:
   - crmscript
   children:
@@ -36,6 +37,7 @@ items:
   fullName: CRMScript.Global.Date.Date(Date)
   type: Constructor
   summary: "\nPass a value to copy into a new object.\n"
+  remarks: "\nThe default value is now.\n"
   example:
   - "\n<pre><code>Date d;\nDate next = Date(d);\nprintLine(next.toString());</code></pre>\n"
   syntax:
@@ -57,6 +59,7 @@ items:
   fullName: CRMScript.Global.Date.Date(String)
   type: Constructor
   summary: "\nPass a String containing a date on format YYYY-MM-DD. The constructor will parse the text and create a Date object.\n"
+  remarks: "\nThe default value is now.\n"
   example:
   - "\n<pre><code>String newYearsDay = &quot;2020-01-01&quot;;\nDate q1 = Date(newYearsDay);</code></pre>\n"
   syntax:
