--- a/docs/api-reference/new/CRMScript.Global.DateTime.yml
+++ b/docs/api-reference/new/CRMScript.Global.DateTime.yml
@@ -2,7 +2,8 @@
 items:
 - uid: CRMScript.Global.DateTime
   commentId: T:CRMScript.Global.DateTime
-  id: Date
+  id: DateTime
+  so.intellisense: Void.DateTime
   langs:
   - crmscript 
   children:
@@ -68,7 +69,7 @@ items:
   nameWithType: DateTime.DateTime(Integer, Integer, Integer, Integer, Integer, Integer)
   fullName: CRMScript.Global.DateTime
   type: Method
-  summary: "\nSpecify all elements of a DateTime individually. The constructor automatically calculates the weekday.\n"
+  summary: "\nSpecify all elements of a DateTime individually. It accepts 6 integer values, representing year, month (1-12), day-of-month (1-31), hour (0-23), minute (0-59), and second (0-59). The constructor automatically calculates the weekday.\n"
   example:
   - "\n<pre><code>DateTime schoolEnds = DateTime(2020,06,22,11,0,0);</code></pre>\n"
   syntax:
