--- a/docs/api-reference/new/CRMScript.Global.Integer.yml
+++ b/docs/api-reference/new/CRMScript.Global.Integer.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   id: Integer
+  so.intellisense: Void.Integer
   langs:
   - crmscript
   children:
@@ -49,6 +50,8 @@ items:
   fullName: CRMScript.Global.Integer.Integer(String)
   type: Constructor
   summary: "\nPass a String containing a number. The constructor will parse the text and create an Integer object.\n"
+  example:
+  - "\n<pre><code>Integer favOfSheldon = Integer(&quot;73&quot;);</code></pre>\n"
   syntax:
     content: Integer Integer(String value)
     parameters:
