--- a/docs/api-reference/new/CRMScript.Global.Map.yml
+++ b/docs/api-reference/new/CRMScript.Global.Map.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.Map
   commentId: T:CRMScript.Global.Map
   id: Map
+  so.intellisense: Void.Map
   langs:
   - crmscript
   children:
@@ -40,7 +41,7 @@ items:
   nameWithType: Map.Map()
   fullName: CRMScript.Global.Map.Map()
   type: Constructor
-  summary: "\nCreates an empty map.\n"
+  summary: "\nCalled with no parameters, it creates an empty Map.\n"
   syntax:
     content: Map Map()
     parameters: []
