--- a/docs/api-reference/new/CRMScript.Global.Time.yml
+++ b/docs/api-reference/new/CRMScript.Global.Time.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.Time
   commentId: T:CRMScript.Global.Time
   id: Time
+  so.intellisense: Void.Time
   langs:
   - crmscript
   children:
