--- a/docs/api-reference/new/CRMScript.Global.yml
+++ b/docs/api-reference/new/CRMScript.Global.yml
@@ -6,16 +6,19 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.Global.Void
   - CRMScript.Global.Bool
+  - CRMScript.Global.Byte
+  - CRMScript.Global.Date
+  - CRMScript.Global.DateTime
   - CRMScript.Global.Integer
   - CRMScript.Global.Float
   - CRMScript.Global.Generic
   - CRMScript.Global.Map
   - CRMScript.Global.String
-  - CRMScript.Global.Date
-  - CRMScript.Global.DateTime
   - CRMScript.Global.Time
+  - CRMScript.Global.Vector
+  - CRMScript.Global.Void
+  - CRMScript.Global.XMLNode
   name: CRMScript.Global
   nameWithType: CRMScript.Global
   fullName: CRMScript.Global
@@ -88,3 +91,21 @@ references:
   name: Generic
   nameWithType: Generic
   fullName: CRMScript.Global.Generic
+- uid: CRMScript.Global.XMLNode
+  commentId: T:CRMScript.Global.XMLNode
+  isExternal: true
+  name: XMLNode
+  nameWithType: XMLNode
+  fullName: CRMScript.Global.XMLNode
+- uid: CRMScript.Global.Byte
+  commentId: T:CRMScript.Global.Byte
+  isExternal: true
+  name: Byte
+  nameWithType: Byte
+  fullName: CRMScript.Global.Byte
+- uid: CRMScript.Global.Vector
+  commentId: T:CRMScript.Global.Vector
+  isExternal: true
+  name: Vector
+  nameWithType: Vector
+  fullName: CRMScript.Global.Vector
