--- a/docs/api-reference/new/toc.yml
+++ b/docs/api-reference/new/toc.yml
@@ -4,28 +4,34 @@ items:
   href: CRMScript.yml
 - name: CRMScript.NetServer
   href: CRMScript.NetServer.yml
-- name: CRMScript.Global
+- name: Global functions and data types
   href: CRMScript.Global.yml
   items:
-  - name: CRMScript.Global.Void
-    href: CRMScript.Global.Void.yml
-  - name: CRMScript.Global.Bool
+  - name: Bool
     href: CRMScript.Global.Bool.yml
-  - name: CRMScript.Global.Integer
-    href: CRMScript.Global.Integer.yml
-  - name: CRMScript.Global.Float
-    href: CRMScript.Global.Float.yml
-  - name: CRMScript.Global.String
-    href: CRMScript.Global.String.yml
-  - name: CRMScript.Global.Map
-    href: CRMScript.Global.Map.yml
-  - name: CRMScript.Global.Generic
-    href: CRMScript.Global.Generic.yml
-  - name: CRMScript.Global.Date
+  - name: Byte
+    href: CRMScript.Global.Byte.yml
+  - name: Date
     href: CRMScript.Global.Date.yml
-  - name: CRMScript.Global.DateTime
+  - name: DateTime
     href: CRMScript.Global.DateTime.yml
-  - name: CRMScript.Global.Time
+  - name: Integer
+    href: CRMScript.Global.Integer.yml
+  - name: Float
+    href: CRMScript.Global.Float.yml
+  - name: Map
+    href: CRMScript.Global.Map.yml
+  - name: Generic
+    href: CRMScript.Global.Generic.yml
+  - name: String
+    href: CRMScript.Global.String.yml
+  - name: Time
     href: CRMScript.Global.Time.yml
+  - name: Vector
+    href: CRMScript.Global.Vector.yml
+  - name: Void
+    href: CRMScript.Global.Void.yml
+  - name: XMLNode
+    href: CRMScript.Global.Vector.yml
 - name: CRMScript.Event
   href: CRMScript.Event.yml
