--- a/docs/api-reference/new/CRMScript.Global.Float.yml
+++ b/docs/api-reference/new/CRMScript.Global.Float.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.Float
   commentId: T:CRMScript.Global.Float
   id: Float
+  so.intellisense: Void.Float
   langs:
   - crmscript
   children:
