--- a/docs/api-reference/new/CRMScript.Global.String.yml
+++ b/docs/api-reference/new/CRMScript.Global.String.yml
@@ -3,6 +3,7 @@ items:
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   id: String
+  so.intellisense: Void.String
   langs:
   - crmscript
   children:
