--- a/docs/api-reference/new/CRMScript.Global.Float.yml
+++ b/docs/api-reference/new/CRMScript.Global.Float.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: Float
   fullName: CRMScript.Global.Float
   type: Class
-  summary: "\nFloats are approximations of real numbers written with decimals. If you don't need to work with decimals, use the Integer data type.\n"
+  summary: "\nA class for representing floating point numbers as objects. Floats are approximations of real numbers written with decimals. If you don't need to work with decimals, use the Integer data type.\n"
   example:
   - "\n<pre><code>Integer i = 42;\nFloat f = 3.14;</code></pre>\n"
 - uid: CRMScript.Global.Float.#ctor(Float)
@@ -88,6 +88,7 @@ items:
 - uid: CRMScript.Global.Float.toString(Integer)
   commentId: M:CRMScript.Global.Float.toString(Integer)
   id: toString(Integer)
+  so.intellisense: Float.toString
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -110,6 +111,7 @@ items:
 - uid: CRMScript.Global.Float.abs()
   commentId: M:CRMScript.Global.Float.abs()
   id: abs()
+  so.intellisense: Float.abs
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -128,6 +130,7 @@ items:
 - uid: CRMScript.Global.Float.floor()
   commentId: M:CRMScript.Global.Float.floor()
   id: floor()
+  so.intellisense: Float.floor
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -146,6 +149,7 @@ items:
 - uid: CRMScript.Global.Float.round()
   commentId: M:CRMScript.Global.Float.round()
   id: round()
+  so.intellisense: Float.round
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -164,6 +168,7 @@ items:
 - uid: CRMScript.Global.Float.isNull()
   commentId: M:CRMScript.Global.Float.isNull()
   id: isNull()
+  so.intellisense: Float.isNull
   langs:
   - crmscript
   parent: CRMScript.Global.Float
@@ -172,6 +177,7 @@ items:
   fullName: CRMScript.Global.Float.isNull()
   type: Method
   summary: "\nReturns true if it has no value and false if it does.\n"
+  remarks: "\nA NULL/NUL/NIL Float is different from zero, in that it is conceptually without a value. However, when a null Float is used naively, CRMScript is usually forgiving and interprets it as zero.`n"
   syntax:
     content: Bool isNull()
     parameters: []
