--- a/docs/api-reference/new/CRMScript.Global.Bool.yml
+++ b/docs/api-reference/new/CRMScript.Global.Bool.yml
@@ -8,16 +8,17 @@ items:
   - crmscript
   children:
     - CRMScript.Global.Bool.#ctor(Bool)
-    - CRMScript.Global.Bool.toInteger(Bool)
-    - CRMScript.Global.Bool.toString(Bool)
+    - CRMScript.Global.Bool.toInteger()
+    - CRMScript.Global.Bool.toString()
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
   type: Class
-  summary: "\nTrue/false.<p></p>\nVariables of this type are commonly used in comparisons and conditional statements.\n"
+  summary: "\nA class for representing booleans as objects.True/false.<p></p>\nVariables of this type are commonly used in comparisons and conditional statements.\n"
 - uid: CRMScript.Global.Bool.#ctor(Bool)
   commentId: M:CRMScript.Global.Bool.#ctor(Bool)
   id: '#ctor(Bool)'
+  so.intellisense: Void.Bool
   langs:
   - crmscript
   parent: CRMScript.Global.Bool
@@ -30,44 +31,40 @@ items:
     content: Bool Bool(Bool value)
   example:
   - "<pre><code>Bool isWellFormed = true;\nBool isValid = Bool(isWellFormed);\nBool isCertified = Bool(false);</code></pre>"
-- uid: CRMScript.Global.Bool.toInteger(Bool)
-  commentId: M:CRMScript.Global.Bool.toInteger(Bool)
-  id: toInteger(Bool)
+- uid: CRMScript.Global.Bool.toInteger()
+  commentId: M:CRMScript.Global.Bool.toInteger()
+  id: toInteger()
+  so.intellisense: Bool.toInteger
   langs:
   - crmscript
   parent: CRMScript.Global.Bool
-  name: toInteger(Bool)
-  nameWithType: Bool.toInteger(Bool)
-  fullName: CRMScript.Global.Bool.toInteger(Bool)
+  name: toInteger()
+  nameWithType: Bool.toInteger()
+  fullName: CRMScript.Global.Bool.toInteger()
   type: Method
   summary: "\nConverts a boolean value to its integer representation (0 or 1).\n"
   syntax:
-    content: Integer toInteger(Bool value)
-    parameters:
-    - id: value
-      type: CRMScript.Global.Bool
-      description: Bool object or true/false.
+    content: Integer toInteger()
+    parameters: []
     return:
       type: CRMScript.Global.Integer
-- uid: CRMScript.Global.Bool.toString(Bool)
-  commentId: M:CRMScript.Global.Bool.toString(Bool)
-  id: toString(Bool)
+- uid: CRMScript.Global.Bool.toString()
+  commentId: M:CRMScript.Global.Bool.toString()
+  id: toString()
+  so.intellisense: Bool.toString
   langs:
   - crmscript
   parent: CRMScript.Global.Bool
-  name: toString(Bool)
-  nameWithType: Bool.toString(Bool)
-  fullName: CRMScript.Global.Bool.toString(Bool)
+  name: toString()
+  nameWithType: Bool.toString()
+  fullName: CRMScript.Global.Bool.toString()
   type: Method
-  summary: "\nConverts a boolean value to its string representation.\n"
+  summary: "\nConverts a boolean value to its string representation (&quot;true&quot; or &quot;false&quot;).\n"
   example:
   - "<pre><code>\nBool b = true;\nprintLine(b.toString());</code></pre>\n"
   syntax:
-    content: String toString(Bool value)
-    parameters:
-    - id: value
-      type: CRMScript.Global.Bool
-      description: Bool object or true/false.
+    content: String toString()
+    parameters: []
     return:
       type: CRMScript.Global.String
 references:
