--- a/docs/api-reference/new/CRMScript.Global.Integer.yml
+++ b/docs/api-reference/new/CRMScript.Global.Integer.yml
@@ -9,7 +9,7 @@ items:
   children:
     - CRMScript.Global.Integer.#ctor(Integer)
     - CRMScript.Global.Integer.#ctor(String)
-    - CRMScript.Global.Integer.toString(Integer)
+    - CRMScript.Global.Integer.toString()
     - CRMScript.Global.Integer.toBool()
     - CRMScript.Global.Integer.toHex()
     - CRMScript.Global.Integer.toHex(Integer)
@@ -23,6 +23,7 @@ items:
 - uid: CRMScript.Global.Integer.#ctor(Integer)
   commentId: M:CRMScript.Global.Integer.#ctor(Integer)
   id: '#ctor(Integer)'
+  so.intellisense: Void.Integer
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -42,6 +43,7 @@ items:
 - uid: CRMScript.Global.Integer.#ctor(String)
   commentId: M:CRMScript.Global.Integer.#ctor(String)
   id: '#ctor(String)'
+  so.intellisense: Void.Integer
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -60,30 +62,29 @@ items:
       description: A String containing a number. For example &quot;13&quot;."
     return:
       type: CRMScript.Global.Integer
-- uid: CRMScript.Global.Integer.toString(Integer)
-  commentId: M:CRMScript.Global.Integer.toString(Integer)
-  id: toString(Integer)
+- uid: CRMScript.Global.Integer.toString()
+  commentId: M:CRMScript.Global.Integer.toString()
+  id: toString()
+  intellisense: Integer.toString
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
-  name: toString(Integer)
-  nameWithType: Integer.toString(Integer)
-  fullName: CRMScript.Global.Integer.toString(Integer)
+  name: toString()
+  nameWithType: Integer.toString()
+  fullName: CRMScript.Global.Integer.toString()
   type: Method
   summary: "\nConverts a numeric value to its string representation.<p></p>\nOne of the most frequently used methods, typically when you are going to output something.\n"
   example:
   - "\n<pre><code>Integer c = 100;\nString s = c.toString();</code></pre>\n"
   syntax:
-    content: String toString(Integer value)
-    parameters:
-    - id: value
-      type: CRMScript.Global.Integer
-      description: Integer object.
+    content: String toString()
+    parameters: []
     return:
       type: CRMScript.Global.String
 - uid: CRMScript.Global.Integer.toBool()
   commentId: M:CRMScript.Global.Integer.toBool()
   id: toBool()
+  so.intellisense: Integer.toBool
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -91,7 +92,7 @@ items:
   nameWithType: Integer.toBool()
   fullName: CRMScript.Global.Integer.toBool()
   type: Method
-  summary: "\nConverts a numeric value to its boolean representation.\n"
+  summary: "\nConverts a numeric value to its boolean representation. Returns false if the integer is zero, otherwise true.\n"
   example:
   - "\n<pre><code>Integer i = 3;\nprintLine(i.toBool().toString());</code></pre>\n"
   syntax: 
@@ -102,6 +103,7 @@ items:
 - uid: CRMScript.Global.Integer.abs()
   commentId: M:CRMScript.Global.Integer.abs()
   id: abs()
+  so.intellisense: Integer.abs
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -120,6 +122,7 @@ items:
 - uid: CRMScript.Global.Integer.toHex()
   commentId: M:CRMScript.Global.Integer.toHex()
   id: toHex()
+  so.intellisense: Integer.toHex
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -128,6 +131,7 @@ items:
   fullName: CRMScript.Global.Integer.toHex()
   type: Method
   summary: "\nConverts an Integer to a hexadecimal string.\n"
+  remarks: "\nBy default, it converts the value of the current object. You can optionally pass a specific value to convert. (See below)\n"
   example:
   - "\n<pre><code>printLine(&quot;Int \\t Hex&quot;);\nfor (Integer i = 0; i &lt; 16; i++) {\n\tprintLine(i.toString() +&quot;\\t &quot; + i.toHex());\n}</code></pre>\n"
   syntax:
@@ -138,6 +142,7 @@ items:
 - uid: CRMScript.Global.Integer.toHex(Integer)
   commentId: M:CRMScript.Global.Integer.toHex(Integer)
   id: toHex(Integer)
+  so.intellisense: Integer.toHex
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -151,12 +156,13 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.Integer
-      description: Integer object.
+      description: Integer object. The value to convert to hex.
     return:
       type: CRMScript.Global.String
 - uid: CRMScript.Global.Integer.isNull()
   commentId: M:CRMScript.Global.Integer.isNull()
   id: isNull()
+  so.intellisense: Integer.isNull
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
@@ -165,6 +171,7 @@ items:
   fullName: CRMScript.Global.Integer.isNull()
   type: Method
   summary: "\nReturns true if it has no value and false if it does.\n"
+  remarks: "\nA NULL/NUL/NIL Integer is different from zero, in that it is conceptually without a value. However, when a null Integer is used naively, CRMScript is usually forgiving and interprets it as zero.\n"
   example:
   - "\n<pre><code>Integer i;\nprintLine(i.isNull().toString());\ni = 0;\nprintLine(i.isNull().toString());</code></pre>\nThe 1st output will be true because we haven't initialized ì yet.\nThe next output will be false because i now has the value 0.\n"
   syntax:
