--- a/docs/api-reference/new/CRMScript.Global.Time.yml
+++ b/docs/api-reference/new/CRMScript.Global.Time.yml
@@ -21,12 +21,13 @@ items:
   nameWithType: Time
   fullName: CRMScript.Global.Time
   type: Class
-  summary: "\nTime is a complex data type representing the time of the day in hours, minutes, and seconds. The default value is now. ISO 8601 uses the 24-hour clock system. Format: hh:mm:ss\n"
+  summary: "\nA class for representing time as objects. Time is a complex data type representing the time of the day in hours, minutes, and seconds. The default value is now. ISO 8601 uses the 24-hour clock system. Format: hh:mm:ss\n"
   example:
   - "\n<pre><code>Time t;\nprint(t.toString());</code></pre>\n"
 - uid: CRMScript.Global.Time.#ctor(Time)
   commentId: M:CRMScript.Global.Time.#ctor(Time)
   id: '#ctor(Time)'
+  so.intellisense: Void.Time
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -48,6 +49,7 @@ items:
 - uid: CRMScript.Global.Time.#ctor(String)
   commentId: M:CRMScript.Global.Time.#ctor(String)
   id: '#ctor(String)'
+  so.intellisense: Void.Time
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -69,6 +71,7 @@ items:
 - uid: CRMScript.Global.Time.toString()
   commentId: M:CRMScript.Global.Time.toString()
   id: toString()
+  so.intellisense: Time.toString
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -87,6 +90,7 @@ items:
 - uid: CRMScript.Global.Time.setHour(Integer)
   commentId: M:CRMScript.Global.Time.setHour(Integer)
   id: setHour(Integer)
+  so.intellisense: Time.setHour
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -97,6 +101,7 @@ items:
   summary: "\nOverwrites the current time and sets hours to the given number [0-23].\n"
   example:
   - "\n<pre><code>Time t;\nt.setHour(14);</code></pre>\n"
+  - "\n10:15:30:\n<pre><code>Time t;\nt.setHour(10);\nt.setMin(15);\nt.setSec(30);</code></pre>\n"
   syntax:
     content: Void setHour(Integer hour)
     parameters:
@@ -107,6 +112,7 @@ items:
 - uid: CRMScript.Global.Time.setMin(Integer)
   commentId: M:CRMScript.Global.Time.setMin(Integer)
   id: setMin(Integer)
+  so.intellisense: Time.setMin
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -117,6 +123,7 @@ items:
   summary: "\nOverwrites the current time and sets minutes to the given number [0-59].\n"
   example:
   - "\n<pre><code>Time t;\nt.setMin(37);</code></pre>\n"
+  - "\n10:15:30:\n<pre><code>Time t;\nt.setHour(10);\nt.setMin(15);\nt.setSec(30);</code></pre>\n"
   syntax:
     content: Void setMin(Integer min)
     parameters:
@@ -127,6 +134,7 @@ items:
 - uid: CRMScript.Global.Time.setSec(Integer)
   commentId: M:CRMScript.Global.Time.setSec(Integer)
   id: setSec(Integer)
+  so.intellisense: Time.setSec
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -137,6 +145,7 @@ items:
   summary: "\nOverwrites the current time and sets seconds to the given number [0-59].\n"
   example:
   - "\n<pre><code>Time t;\nt.setSec(0);</code></pre>\n"
+  - "\n10:15:30:\n<pre><code>Time t;\nt.setHour(10);\nt.setMin(15);\nt.setSec(30);</code></pre>\n"
   syntax:
     content: Void setSec(Integer sec)
     parameters:
@@ -147,6 +156,7 @@ items:
 - uid: CRMScript.Global.Time.getHour()
   commentId: M:CRMScript.Global.Time.getHour()
   id: getHour()
+  so.intellisense: Time.getHour
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -165,6 +175,7 @@ items:
 - uid: CRMScript.Global.Time.getMin()
   commentId: M:CRMScript.Global.Time.getMin()
   id: getMin()
+  so.intellisense: Time.getMin
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -183,6 +194,7 @@ items:
 - uid: CRMScript.Global.Time.getSec()
   commentId: M:CRMScript.Global.Time.getSec()
   id: getSec()
+  so.intellisense: Time.getSec
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -201,6 +213,7 @@ items:
 - uid: CRMScript.Global.Time.isNull()
   commentId: M:CRMScript.Global.Time.isNull()
   id: isNull()
+  so.intellisense: Time.isNull
   langs:
   - crmscript
   parent: CRMScript.Global.Time
@@ -209,6 +222,7 @@ items:
   fullName: CRMScript.Global.Time.isNull()
   type: Method
   summary: "\nReturns true if it has no value and false if it does.\n"
+  remarks: "\nA NULL/NUL/NIL Time is different from zero, in that it is conceptually without a value.\n"
   example:
   - "\n<pre><code>Time t;\nprint(t.isNull().toString());</code></pre>\n"
   syntax:
